[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Montserrat-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/sripts/ServerGUI.gd" type="Script" id=3]
[ext_resource path="res://src/sripts/BottomLimit.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="ServerGUI" type="Control"]
anchor_right = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 196.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Dedicated Game Server"
align = 1

[node name="TextTP" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 992.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
align = 1
editable = false
placeholder_text = "Start server to generate IP address"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 992.0
margin_bottom = 164.0
custom_constants/separation = 8

[node name="StartServer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 492.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="StopServer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 992.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Stop"

[node name="BottomLimit" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 992.0
margin_bottom = 180.0
script = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartServer" to="." method="_on_StartServer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StopServer" to="." method="_on_StopServer_pressed"]
